# turing-arena

./: .gitignore  README.md  config.toml  main.py  manage.py  pyproject.toml  server.py  user-manual.md
core/: agent_manager.py  avatar_gen.py  llm_router.py  session_manager.py  topic_tracker.py  wiki_engine.py
db/: schema.sql
handlers/: api.py  chat.py  upload.py  wiki.py
static/css/: arena.css
static/js/: arena.js
templates/: index.html
utils/: slice_avatars.py
